# strata

./: .gitignore  README.md  pyproject.toml
src/strata/: cli.py  config.py  config.yml  config_models.py  setup.py
src/strata/builder/: compose.py  env.py  preprocess.py  render.py  resolve.py  scaffold.py
src/strata/templates/blocks/: base_environment_template.yml.tpl  base_service_template.yml.tpl  base_traefik_network_template.yml.tpl  homepage_labels_template.yml.tpl  traefik_labels_template.yml.tpl
src/strata/templates/scaffolds/docker/: .strata.yml  docker-compose.yml.tpl
src/strata/templates/scaffolds/strata/: scaffold.yml
src/strata/templates/stacks/: adminer_docker_compose.yml  homepage_docker_compose.yml
